# tailwag_orm

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/logic/: Cargo.toml
macros/logic/src/: lib.rs
macros/logic/src/derive/: deleteable.rs  filterable.rs  get_table_definition.rs  id.rs  insertable.rs  mod.rs  updateable.rs
macros/logic/src/util/: attribute_parsing.rs  database_table_definition.rs  mod.rs  type_parsing.rs
macros/src/: lib.rs
macros/src/logic/derive/: deleteable.rs  id.rs  insertable.rs  mod.rs  updateable.rs
macros/src/util/: type_parsing.rs
src/: lib.rs
src/data_definition/: database_definition.rs  exp_data_system.rs  mod.rs
src/data_definition/table/: identifier.rs  mod.rs  table.rs
src/data_definition/table/column/: column.rs  mod.rs
src/data_definition/table/column/constraints/: constraints.rs  mod.rs
src/data_definition/table/constraints/: mod.rs
src/data_manager/: in_memory.rs  local_files.rs  local_storage_provider.rs  mod.rs  postgres.rs  postgres_data_provider.rs  rest_api.rs
src/data_manager/in_memory/: data_provider.rs  mod.rs
src/data_manager/postgres/: data_provider.rs
src/data_manager/rest_api/: mod.rs
src/data_manager/threaded/: mod.rs
src/data_manager/traits/: data_provider.rs  executable_query.rs  get_data_provider.rs  mod.rs
src/database_definition/: database_definition.rs  mod.rs
src/database_definition/migration/: alter_table.rs  create_table.rs  migration.rs  mod.rs
src/database_definition/object_management/: insert.rs  update.rs
src/database_definition/table_definition/: column.rs  identifier.rs  mod.rs  table.rs  table_definition.rs
src/database_definition/table_definition/column/: column.rs
src/database_definition/table_definition/column/constraints/: constraints.rs
src/database_definition/table_definition/constraints/: mod.rs
src/executor/: mod.rs  postgres_executor.rs
src/migration/: alter_table.rs  create_table.rs  migration.rs  mod.rs
src/object_management/: delete.rs  insert.rs  mod.rs  update.rs
src/queries/: filters.rs  mod.rs  query_builder.rs
src/queries/filters/: filterable_types.rs  filters.rs  mod.rs
testing/: Cargo.toml
testing/src/: main.rs
