[package]
name = "tailwag_orm"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full", "parsing"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
