[package]
name = "tailwag_orm"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = [
#     "macros",
#     "macros/logic",
# ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
json = "0.12.4"
log = "0.4.20"
quote = "1.0.29"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "chrono",
    "postgres",
] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
