[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_dataprovider_logic = { version = "0.1.0", path = ".." }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.29.1", features = ["macros", "full"] }
