[package]
name = "tailwag_orm_macro_logic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag_orm"
description = "The logic for the macro exports, supporting the tailwag_orm crate. This crate will eventually be deprecated and merged into the tailwag_orm_macros crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
tailwag_orm = {version = "0.1.0", path = "../.."}
tailwag_utils = { version = "0.1.0", path = "../../../utils" }
